W-13748730: Add module-info to mule-core and services apis
* Add missing exports for standalone